@@ -36,6 +36,7 @@
 #include "thecl.h"
 #include "util.h"
 
+extern const thecl_module_t th95_ecl;
 extern const thecl_module_t th10_ecl;
 
 thecl_t*
@@ -169,7 +170,7 @@ print_usage(void)
            "  h  display this help and exit\n"
            "  V  display version information and exit\n"
            "OPTION can be:\n"
-           "  #  # can be 10, 11, 12, 125, or 128 (required)\n"
+           "  #  # can be 95, 10, 11, 12, 125, or 128 (required)\n"
            "Report bugs to <" PACKAGE_BUGREPORT ">.\n", argv0);
 }
 
@@ -188,6 +189,9 @@ main(int argc, char* argv[])
     mode = parse_args(argc, argv, print_usage, "cdhV", "", &version);
 
     switch (version) {
+    case 95:
+        module = &th95_ecl;
+        break;
     case 10:
     case 11:
     case 12:
